# ComfyUI-FRED-Nodes

./: FRED_Advanced_multi_parameters_panel_v1.py  FRED_AutoCropImage_Native_Ratio_v5.py  FRED_AutoCropImage_SDXL_Ratio_v3.py  FRED_AutoCropImage_SDXL_Ratio_v4.py  FRED_AutoImageTile_from_Mask_v1.py  FRED_CropFace.py  FRED_ImageBrowser.py  FRED_ImageQualityInspector.py  FRED_ImageUncropFromBBox.py  FRED_JoinImages_v1.py  FRED_LoadImage_V2.py  FRED_LoadImage_V3.py  FRED_LoadImage_V4.py  FRED_LoadImage_V5.py  FRED_LoadImage_V6.py  FRED_LoadImage_V7.py  FRED_LoadImage_V8.py  FRED_LoadPathImagesPreivew.py  FRED_LoadPathImagesPreivew_v2.py  FRED_LoadRetinaFace.py  FRED_LoraInfos.py  FRED_PreviewOnly.py  FRED_Simplified_Parameters_Panel.py  FRED_TextMultiline.py  FRED_Text_to_XMP.py  FRED_photo_prompt.py  README.md  __init__.py  pyproject.toml  requirements.txt  utils.py
example_workflows/: FRED_workflow_1.json
web/: FRED_control_panel.js  bilboxContextMenuEnhance.js  index.js
web/PromptGeek/: photo_data.json
workflows/: FRED_workflow_1.json
