[project]
name = "ComfyUI FRED Nodes"
description = "Multiple nodes that ease the process."
version = "1.0.0"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/Poukpalaova/ComfyUI-FRED-Nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "Poukpalaova"
DisplayName = "ComfyUI FRED Nodes"
Icon = ""
